--- a/src/app/styles/default.css
+++ b/src/app/styles/default.css
@@ -4,9 +4,20 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: var(--font-family);
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 button {
@@ -16,6 +27,10 @@ button {
   background-color: transparent;
   font-family: inherit;
   cursor: pointer;
+}
+
+a {
+  text-decoration: none;
 }
 
 ul {
@@ -34,7 +49,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   font-size: 16px;
   font-family: inherit;
   padding: 0;
