restore questionApi from master

--- a/src/app/styles/variable.css
+++ b/src/app/styles/variable.css
@@ -62,6 +62,7 @@
   --secondary-indigo: #95a4fc;
   --secondary-purple: #c6c7f8;
   --primary-purple: #e5ecf6;
+  --black-400: rgba(28, 28, 28, 0.4);
   --black-800: rgba(28, 28, 28, 0.8);
   --white-1000: #fff;
   --primary-brand: #1c1c1c;
