--- a/src/app/styles/default.css
+++ b/src/app/styles/default.css
@@ -4,20 +4,9 @@
   box-sizing: border-box;
 }
 
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   margin: 0;
   font-family: var(--font-family);
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 button {
@@ -27,10 +16,6 @@ button {
   background-color: transparent;
   font-family: inherit;
   cursor: pointer;
-}
-
-a {
-  text-decoration: none;
 }
 
 ul {
@@ -49,8 +34,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   font-size: 16px;
   font-family: inherit;
   padding: 0;
