--- a/src/shared/ui/Text/Text.module.css
+++ b/src/shared/ui/Text/Text.module.css
@@ -1,6 +1,27 @@
-.text {
+.textGrey {
+  color: var(--black-400);
+}
+
+.textWhite {
+  color: var(--white-1000);
+}
+
+.fw400 {
+  font-weight: 400;
+}
+
+.fw500 {
   font-weight: 500;
+}
+
+.textSmall {
+  font-size: 12px;
+}
+
+.textNormal {
   font-size: 16px;
-  line-height: 1.3;
-  color: var(--black-700);
+}
+
+.textBig {
+  font-size: 18px;
 }
