--- a/src/widgets/question/ui/QuestionFilter/QuestionFilter.module.css
+++ b/src/widgets/question/ui/QuestionFilter/QuestionFilter.module.css
@@ -7,3 +7,17 @@
   border-radius: 24px;
   background-color: var(--white);
 }
+
+.button {
+  align-self: flex-start;
+
+  padding: 12px 29px;
+  border: 1px solid var(--purple-700);
+
+  transition: color 0.2s, background-color 0.2s;
+}
+
+.button:hover {
+  color: var(--white);
+  background-color: var(--purple-700);
+}
