Рефакторинг, перенос компонентов

--- a/src/entities/question/ui/QuestionItem/QuestionItem.module.css
+++ b/src/entities/question/ui/QuestionItem/QuestionItem.module.css
@@ -50,6 +50,13 @@
   gap: 40px;
 }
 
+div .text p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.3;
+  color: var(--black-800);
+}
+
 .link {
   align-self: end;
   font-weight: 600;
