--- a/src/shared/ui/Skeleton/Skeleton.module.css
+++ b/src/shared/ui/Skeleton/Skeleton.module.css
@@ -1,8 +1,14 @@
 .list {
+  width: 100%;
   padding: 8px 0;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 4px;
+}
+
+.row {
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .question {
@@ -22,7 +28,22 @@
 .specialization {
   overflow: hidden;
   height: 40px;
-  margin: 2px 0;
+  width: 100%;
+  border-bottom: 0.5px solid var(--black-50);
+  background: linear-gradient(
+    -90deg,
+    var(--red-600) 0%,
+    var(--purple-700) 50%,
+    var(--black-400)
+  );
+  background-size: 400% 400%;
+  animation: pulse 1.2s ease-in-out infinite;
+}
+
+.skills {
+  overflow: hidden;
+  width: 100px;
+  height: 40px;
   border-bottom: 0.5px solid var(--black-50);
   background: linear-gradient(
     -90deg,
